@@ -1,6 +1,8 @@
 ver 0.22.7 (not yet released)
 * protocol
   - don't use glibc extension to parse time stamps
+* input
+  - curl: send user/password in the first request, save one roundtrip
 * decoder
   - ffmpeg: fix build problem with FFmpeg 3.4
   - gme: support RSN files
